# Trashore

./: 3  CMakeLists.txt  README.md  install.sh  menu.rml
Backends/: RmlUi_Platform_SDL.cpp  RmlUi_Platform_SDL.h  RmlUi_Renderer_SDL.cpp  RmlUi_Renderer_SDL.h
rml/: menu.css  menu.html
src/: EngineState.cpp  GameEngine.cpp  GameEngine.h  GameGlobal.cpp  GameGlobal.h  LogFiles.cpp  LogFiles.h  Logger.cpp  Logger.h  SdlDebug.cpp  button.cpp  button.h  engine_state.cpp  engine_state.h  game.cpp  game.h  game_engine.cpp  game_engine.h  game_global.cpp  game_global.h  gameplay.cpp  gameplay.h  log_files.cpp  log_files.h  main.cpp  main_menu.cpp  main_menu.h  pause_menu.cpp  pause_menu.h  text.cpp  text.h
src/camera/: Camera.cpp  Camera.h  camera.cpp  camera.h
src/character/: Character.cpp  Character.h  CharacterFactory.cpp  CharacterFactory.h  Npc.cpp  Npc.h  Player.cpp  Player.h  character.cpp  character.h  character_factory.cpp  character_factory.h  npc.cpp  npc.h  player.cpp  player.h
src/elements/: Button.cpp  Button.h  CompositeElement.cpp  CompositeElement.h  Container.cpp  Container.h  Element.cpp  Element.h  LoadingBar.cpp  LoadingBar.h  Text.cpp  Text.h  button.cpp  button.h  composite_element.cpp  composite_element.h  container.cpp  container.h  element.cpp  element.h  gui_box.cpp  gui_box.h  loading_bar.cpp  loading_bar.h  number_setting.cpp  number_setting.h  panel.cpp  panel.h  scroll_box.h  text.cpp  text.h
src/elements/flappy_food/: bird.cpp  bird.h  flappy_food.cpp  flappy_food.h  obstacle.cpp  obstacle.h  obstacle_pair.cpp  obstacle_pair.h
src/states/: Gameplay.cpp  Gameplay.h  MainMenu.cpp  MainMenu.h  MainMenuRmlEventHandler.cpp  MainMenuRmlEventHandler.h  MainMenuRmlEventListener.h  State.cpp  State.h  gameplay.cpp  gameplay.h  main_menu.cpp  main_menu.h  state.cpp  state.h
src/states/gameplay/: Gameplay.h
src/states/main_menu/: MainMenu.cpp  MainMenu.h  MainMenuRmlEventHandler.cpp  MainMenuRmlEventHandler.h  MainMenuRmlEventListener.cpp
src/tile/: DirtTile.cpp  DirtTile.h  Tile.cpp  Tile.h  TileFactory.cpp  TileFactory.h  TileMap.cpp  TileMap.h  WaterTile.cpp  WaterTile.h  dirt_tile.cpp  dirt_tile.h  tile.cpp  tile.h  tile_factory.cpp  tile_factory.h  tile_map.cpp  tile_map.h  water_tile.cpp  water_tile.h
